# tainer-cli

./: Cargo.toml  README.md  install.ps1
.github/workflows/: publish.yml
src/: git.rs  main.rs  win.rs
src/commands/: application_host.rs  connection_strings.rs  create_user.rs  git_cmd.rs  mod.rs  setup.rs  watch.rs  web_api.rs
