[package]
name = "tainer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
walkdir = "2.5.0"
tiberius = "0.12.2"
tokio-util = { version = "0.7.11", features = ["compat"] }
uuid = { version = "1.8.0", features = ["v4"] }
console = "0.15.8"
dialoguer = "0.11.0"
